# events-telegram-handler

./: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
links_api/: get_links.py
models/: Event.py  Price.py
open_api/: chat_gpt.py  generate_prompt.py
python_bot/: channels  config.ini  main.py
python_bot/Models/: Event.py  Price.py
python_bot/chat_gpt/: generate_prompt.py
python_bot/links_api/: get_links.py
python_bot/telegram_api/: get_new_events.py
telegram_api/: get_new_events.py
