[tool.poetry]
name = "python-usrus-bot"
version = "0.1.0"
description = ""
authors = ["tplaymeow <wersa2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
telethon = "^1.33.0"
openai = "^0.28.0"
python = "^3.11"

[tool.poetry.group.dev.dependencies]
setuptools = "^68.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
